header and scrollbar style fixes

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app {
     padding: 20px 0;
     text-align: center;
-    height: 600px;
+    /* height: 600px; */
 }
 
 .wrapper {
